@@ -86,8 +86,16 @@ function m.default_energy_mod(name)
     return m.mod({ [name] = m.energy(0.3) })
 end
 
+-- Default roboport mod
+m.default_roboport_mod = m.mod {
+    ["charging_energy"] = m.energy(0.3),
+    ["energy_source.buffer_capacity.?"] = m.energy(0.3),
+    ["energy_source.input_flow_limit.?"] = m.energy(0.3),
+    ["energy_source.output_flow_limit.?"] = m.energy(0.3),
+}
+
 -- Default high level modification function for attack_parameters
-m.default_attack_parameters = m.mod({ ["attack_parameters.range"] = m.mult(0.1) })
+m.default_attack_parameters = m.mod { ["attack_parameters.range"] = m.mult(0.1) }
 
 -- Combines 2 modifiers into one
 function m.combine(mod1, mod2)
