@@ -30,8 +30,8 @@ return {
     ["equipment-grid"] = m.mod { width = m.add(1), height = m.add(1) },
     ["construction-robot"] = m.default_energy_mod("max_energy"),
     ["logistic-robot"] = m.default_energy_mod("max_energy"),
-    ["roboport"] = m.default_energy_mod("charging_energy"),
-    ["roboport-equipment"] = m.default_energy_mod("charging_energy"),
+    ["roboport"] = m.default_roboport_mod,
+    ["roboport-equipment"] = m.default_roboport_mod,
     ["energy-shield-equipment"] = m.default_mod("max_shield_value"),
     ["movement-bonus-equipment"] = m.default_mod("movement_bonus"),
     ["artillery-turret"] = m.mod { gun = m.with_quality },
