@@ -6,6 +6,7 @@ Date: ???
   Bug fixes:
     - Fixed personal roboports losing quality
     - Support for energy values with uppercase "K"
+    - Fixed roboport internal battery too small
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.11
 Date: 2023.11.15
